# halowabot

./: .rustfmt.toml  Cargo.toml
.gitea/actions/: lint.yml
edupage-api/: Cargo.toml
src/: cmd.rs  commands.rs  functionality.rs  lib.rs  main.rs
